--- a/custom.css
+++ b/custom.css
@@ -1,5 +1,5 @@
 /*
- * Logseq Custom Theme - Iteración 3
+ * Tropical Minimal Theme - V 0.3
  * Diseñado por [@yxeniam]
  *
  * Esta versión integra las siguientes preferencias:
